--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "check": "npm run typecheck && npm run lint"
   },
   "dependencies": {
+    "@azure/msal-browser": "^3.27.0",
     "@supabase/supabase-js": "^2.57.4",
+    "axios": "^1.7.9",
+    "date-fns": "^4.1.0",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
